<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hynit.eida.RegistroLogin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Registro de Usuario"
        android:textColor="#ffffff"
        android:textSize="25sp"

        />

    <LinearLayout
        android:id="@+id/LinearLID"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/NombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ApellidoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Apellido"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/CorreoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo"
            android:inputType="text" />

        <!--<EditText-->
        <!--android:id="@+id"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="Password"-->
        <!--android:inputType="textPassword" />-->
        <EditText
            android:id="@+id/ContrasenaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_registrarLoginActivirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Registrar"

            />
    </LinearLayout>

</LinearLayout>
